--- a/src/app/category-page/category-page.component.html
+++ b/src/app/category-page/category-page.component.html
@@ -62,34 +62,12 @@
                                      <a href="product-page(no-sidebar).html"><h6>Café Arabica Intenso</h6></a>
 
                                                           <h4>A partir de 14,20€</h4>
-                                                          <br><input type="button" value="Ajouter au panier">
+                                                          <br><input class="addtocart-button" type="button" value="Ajouter au panier">
                                                       </div>
                                                   </div>
                                               </div>
                                           </div>
-                                          <div class="col-xl-4 col-md-8 col-grid-box">
-                                            <div class="product-box">
-                                                <div class="img-wrapper">
-                                                    <div class="front">
-                                                        <a href="#"><img src="../assets/images/the-cafe/Cafe_arabica_moka_dulli.jpg" alt=""></a>
-                                                    </div>
-                                                    <div class="back">
-                                                        <a href="#"><img src="../assets/images/the-cafe/Cafe_arabica_moka_dulli.jpg"  alt=""></a>
-                                                    </div>
-                                                    <div class="cart-info cart-wrap">
-                                                        <button data-toggle="modal" data-target="#addtocart"  title="Add to cart"><i class="ti-shopping-cart" ></i></button> <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart" aria-hidden="true"></i></a> <a href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i></a> <a href="compare.html" title="Compare"><i class="ti-reload" aria-hidden="true"></i></a></div>
-                                                </div>
-                                                <div class="product-detail">
-                                                    <div>
-                                   <a href="product-page(no-sidebar).html"><h6>Café Arabica Moka Dulli</h6></a>
-
-                                                        <h4>A partir de 15,90€</h4>
-                                                        <br><input type="button" value="Ajouter au panier">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-4 col-md-8 col-grid-box">
+                                         <div class="col-xl-4 col-md-8 col-grid-box">
                                           <div class="product-box">
                                               <div class="img-wrapper">
                                                   <div class="front">
@@ -106,7 +84,7 @@
                                  <a href="product-page(no-sidebar).html"><h6>Café Arabica Rio Jorka</h6></a>
 
                                                       <h4>A partir de 19,50€</h4>
-                                                      <br><input type="button" value="Ajouter au panier">
+                                                      <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                                   </div>
                                               </div>
                                           </div>
@@ -128,7 +106,7 @@
                                <a href="product-page(no-sidebar).html"><h6>Café Moka Bio d'Ethiopie</h6></a>
 
                                                     <h4>A partir de 21,80€</h4>
-                                                    <br><input type="button" value="Ajouter au panier">
+                                                    <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                                 </div>
                                             </div>
                                         </div>
@@ -150,11 +128,33 @@
                              <a href="product-page(no-sidebar).html"><h6>Café Robusta bio Finca Latina</h6></a>
 
                                                   <h4>A partir de 22,80€</h4>
-                                                  <br><input type="button" value="Ajouter au panier">
+                                                  <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                               </div>
                                           </div>
                                       </div>
                                   </div>
+                                  <div class="col-xl-4 col-md-8 col-grid-box">
+                                    <div class="product-box">
+                                        <div class="img-wrapper">
+                                            <div class="front">
+                                                <a href="#"><img src="../assets/images/the-cafe/Cafe_mixte_delicioso.jpg" alt=""></a>
+                                            </div>
+                                            <div class="back">
+                                                <a href="#"><img src="../assets/images/the-cafe/Cafe_mixte_delicioso.jpg"  alt=""></a>
+                                            </div>
+                                            <div class="cart-info cart-wrap">
+                                                <button data-toggle="modal" data-target="#addtocart"  title="Add to cart"><i class="ti-shopping-cart" ></i></button> <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart" aria-hidden="true"></i></a> <a href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i></a> <a href="compare.html" title="Compare"><i class="ti-reload" aria-hidden="true"></i></a></div>
+                                        </div>
+                                        <div class="product-detail">
+                                            <div>
+                           <a href="product-page(no-sidebar).html"><h6>Melange de Cafés Delicioso</h6></a>
+
+                                                <h4>A partir de 17,40€</h4>
+                                                <br><input type="button" class="addtocart-button" value="Ajouter au panier">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                       <div class="col-xl-4 col-md-8 col-grid-box">
                                         <div class="product-box">
                                             <div class="img-wrapper">
@@ -172,7 +172,7 @@
                                <a href="product-page(no-sidebar).html"><h6>Thé Vert Amande</h6></a>
 
                                                     <h4>A partir de 10,10€</h4>
-                                                    <br><input type="button" value="Ajouter au panier">
+                                                    <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                                 </div>
                                             </div>
                                         </div>
@@ -194,7 +194,7 @@
                              <a href="product-page(no-sidebar).html"><h6>Thé Vert Rose</h6></a>
 
                                                   <h4>A partir de 12,50€</h4>
-                                                  <br><input type="button" value="Ajouter au panier">
+                                                  <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                               </div>
                                           </div>
                                       </div>
@@ -216,7 +216,7 @@
                            <a href="product-page(no-sidebar).html"><h6>Rooibos jasmin</h6></a>
 
                                                 <h4>A partir de 5,40€</h4>
-                                                <br><input type="button" value="Ajouter au panier">
+                                                <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                             </div>
                                         </div>
                                     </div>
@@ -238,7 +238,7 @@
                          <a href="product-page(no-sidebar).html"><h6>Rooibos vanille</h6></a>
 
                                               <h4>A partir de 9,90€</h4>
-                                              <br><input type="button" value="Ajouter au panier">
+                                              <br><input type="button" class="addtocart-button" value="Ajouter au panier">
                                           </div>
                                       </div>
                                   </div>
