--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -95,7 +95,7 @@
   <div class="sub-footer">
     <div class="container">
       <div class="row">
-        <div class="col-xl-12 col-md-12 col-sm-12" style="text-align:center">
+        <div class="col-xl-12 col-md-12 col-sm-12">
           <div class="footer-end">
             <p>
               <i class="fa fa-copyright" aria-hidden="true"></i> 2019 Original
