--- a/src/app/category-page/category-page.component.html
+++ b/src/app/category-page/category-page.component.html
@@ -256,6 +256,7 @@
     </section>
 
 <div>################ {{ products }} '------'</div>
+<app-footer></app-footer>
     <!-- tap to top start -->
     <div class="tap-top">
         <div><i class="fa fa-angle-double-up"></i></div>
