--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -280,6 +280,7 @@
     <!-- Product slider end -->
 
    <app-blog></app-blog>
+   <app-footer></app-footer>
 
   <!-- tap to top start -->
   <div class="tap-top">
