--- a/src/app/user-historique/user-historique.component.html
+++ b/src/app/user-historique/user-historique.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="page-wrapper">
     <div class="page-body-wrapper">
-   
+
       <!-- Page Sidebar Start-->
       <div class="page-sidebar">
         <app-user-navbar></app-user-navbar>
@@ -9,7 +9,7 @@
       <!--Navbar user-->
 
       <div class="page-body">
-       
+
         <h2 style="text-align: center; margin-top: 5%;">Historique des commandes</h2>
         <!-- personal detail section start -->
         <section class="contact-page register-page">
@@ -61,7 +61,7 @@
     </div>
   </div>
 </div>
-
+<app-footer></app-footer>
 
   <!-- tap to top -->
   <div class="tap-top">
