--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -131,11 +131,7 @@ hr.style1 {
   background-color: #2d2a25;
 }
 .light-layout {
-<<<<<<< HEAD
   background-color: #f1d6bf;
-=======
-  background-color: #f9f9f9;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .white-layout {
   background-color: #fff;
@@ -335,11 +331,7 @@ button {
   );
   background-image: linear-gradient(to right, #01effc, #485ff2);
   border: none;
-<<<<<<< HEAD
   background-color: #ad802b;
-=======
-  background-color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .btn-solid.btn-green:hover {
   background-color: #ff8084;
@@ -956,11 +948,7 @@ header.green-gradient .top-header {
     from(#01effc),
     to(#485ff2)
   );
-<<<<<<< HEAD
-  background-image: linear-gradient(to right, #01effc, #485ff2);
-=======
   background-image: linear-gradient(to right, #dbe1d8, #d0dcc7, #c7d7b5, #bfd1a2, #b8cb8f);
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 header.green-gradient .top-header .header-contact {
   padding: 10px 0;
@@ -1743,11 +1731,7 @@ header.video-header .top-header .header-dropdown li a i {
   li
   .buttons
   a:hover {
-<<<<<<< HEAD
   color: #644b1d;
-=======
-  color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .main-menu
   .menu-right
@@ -10531,11 +10515,7 @@ footer.footer_digital .white-bg {
   position: absolute;
   right: 0;
   top: 12px;
-<<<<<<< HEAD
   color: #ad802b;
-=======
-  color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .dashboard .box address {
   margin-bottom: 0;
@@ -18856,6 +18836,7 @@ ul.notification-dropdown.onhover-show-div li + li:hover {
   overflow: auto;
   -webkit-box-shadow: 0 0 11px rgba(143, 164, 232, 0.08);
   box-shadow: 0 0 11px rgba(143, 164, 232, 0.08);
+  background-color: #d0e1c7;
 }
 .page-wrapper .page-body-wrapper .page-sidebar {
   width: 255px;
