--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,7 +38,7 @@
           </div>
           <div class="footer-contant">
             <div class="footer-logo">
-              <img src="../assets/images/icon/logo.png" alt="" style="width: 100%;margin-top: -8%;" />
+              <img src="../assets/images/icon/logo.png" alt=""/>
             </div>
           </div>
         </div>
