--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -119,7 +119,7 @@
 
 
     <!-- About section start -->
-    <section>
+    <section id="APropos">
       <div class="container">
           <div class="row">
               <div class="col-lg-8 offset-lg-2">
