--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -131,11 +131,7 @@ hr.style1 {
   background-color: #2d2a25;
 }
 .light-layout {
-<<<<<<< HEAD
   background-color: #f1d6bf;
-=======
-  background-color: #f9f9f9;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .white-layout {
   background-color: #fff;
@@ -153,7 +149,7 @@ hr.style1 {
   background-color: #eee;
 }
 .bg-grey {
-  background-color: #f7f7f7;
+  background-color: #7e3a0052;;
 }
 .bg_cls {
   background-color: #fafafa;
@@ -294,15 +290,7 @@ button {
   color: #fff;
 }
 .btn-solid.btn-gradient {
-<<<<<<< HEAD
-  background: #ad802b;
-=======
-  background: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
   background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
     from(#01effc),
     color-stop(99%, #485ff2)
   );
@@ -335,11 +323,7 @@ button {
   );
   background-image: linear-gradient(to right, #01effc, #485ff2);
   border: none;
-<<<<<<< HEAD
   background-color: #ad802b;
-=======
-  background-color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .btn-solid.btn-green:hover {
   background-color: #ff8084;
@@ -398,11 +382,7 @@ button.btn.btn-solid:active,
 button.btn.btn-outline:active {
   background-image: linear-gradient(30deg, #ff8084 50%, transparent 50%);
   color: #fff;
-<<<<<<< HEAD
   background: #ad802b;
-=======
-  background: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .btn-classic:hover {
   background-color: #ff8084;
@@ -534,7 +514,7 @@ button.btn.btn-outline:active {
   position: relative;
   height: 5px;
   width: 45px;
-  background-color: #ff8084;
+  background-color: #a89c9c;
   content: "";
   left: 0;
   right: 0;
@@ -548,7 +528,7 @@ button.btn.btn-outline:active {
   height: 5px;
   width: 10px;
   content: "";
-  background-color: #ff8084;
+  background-color: #a89c9c;
 }
 .title3 .line:after {
   right: 50px;
@@ -956,11 +936,7 @@ header.green-gradient .top-header {
     from(#01effc),
     to(#485ff2)
   );
-<<<<<<< HEAD
-  background-image: linear-gradient(to right, #01effc, #485ff2);
-=======
   background-image: linear-gradient(to right, #dbe1d8, #d0dcc7, #c7d7b5, #bfd1a2, #b8cb8f);
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 header.green-gradient .top-header .header-contact {
   padding: 10px 0;
@@ -1743,11 +1719,7 @@ header.video-header .top-header .header-dropdown li a i {
   li
   .buttons
   a:hover {
-<<<<<<< HEAD
   color: #644b1d;
-=======
-  color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .main-menu
   .menu-right
@@ -10531,11 +10503,7 @@ footer.footer_digital .white-bg {
   position: absolute;
   right: 0;
   top: 12px;
-<<<<<<< HEAD
   color: #ad802b;
-=======
-  color: #ff8084;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .dashboard .box address {
   margin-bottom: 0;
@@ -18091,7 +18059,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 footer {
   background-color: #fff;
   border-top: 1px solid #f8f8f9;
-  padding: 15px;
+  padding: 0px;
   bottom: 0;
   left: 0;
 }
@@ -20033,13 +20001,8 @@ ul.notification-dropdown.onhover-show-div li + li:hover {
   color: #fff;
 }
 .btn-primary {
-<<<<<<< HEAD
-  background-color: #ff8084 !important;
-  border-color: #ff8084 !important;
-=======
   background-color: #cb9734 !important;
   border-color: #cb9734 !important;
->>>>>>> 0c1a28153fbf7228071405b1f727400f03a1cd6e
 }
 .btn-primary.disabled {
   background-color: #ff8084 !important;
