--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,13 @@
-.col-xl-12 col-md-12 col-sm-12{
+.col-xl-12 .col-md-12 .col-sm-12{
   text-align: center;
 }
+
+.footer-end {
+  text-align: center;
+}
+
+.footer-logo {
+  width: 100%;
+  margin-top: -8%;
+}
+
