--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,12 +10,12 @@
                     <form class="theme-form">
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                            <input type="text" class="form-control" id="email" placeholder="Email" required="" [(ngModel)]="username">
                       </div>
                       <div class="form-group">
                             <label for="review">Mot de passe</label>
-                            <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
-                      </div><a href="#" class="btn btn-solid">Se Connecter</a>
+                            <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="" [(ngModel)]="password">
+                      </div><a href="#" class="btn btn-solid" (click)=checkLogin()>Se Connecter</a>
                     </form>
                 </div>
             </div>
