--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,11 +10,11 @@
                     <form class="theme-form">
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="text" class="form-control" id="email" placeholder="Email" required="" [(ngModel)]="username">
+                            <input type="text" class="form-control" id="email" placeholder="Email" required="" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" >
                       </div>
                       <div class="form-group">
                             <label for="review">Mot de passe</label>
-                            <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="" [(ngModel)]="password">
+                            <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
                       </div><a href="#" class="btn btn-solid" (click)=checkLogin()>Se Connecter</a>
                     </form>
                 </div>
